finish the core api

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "video-compression-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.mjs",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon ./src/index.mjs",
-    "start": "node ./src/index.mjs"
+    "start:dev": "nodemon ./src/index.js",
+    "start": "node ./src/index.js"
   },
   "keywords": [],
   "author": "Ahmed Eishtawi",
@@ -22,5 +22,5 @@
     "@types/node": "^22.10.1",
     "nodemon": "^3.1.7"
   },
-  "type": "module"
+  "type": "commonjs"
 }
