--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "video-compression-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon ./src/index.js",
-    "start": "node ./src/index.js"
+    "start:dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "Ahmed Eishtawi",
@@ -21,6 +22,5 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
     "nodemon": "^3.1.7"
-  },
-  "type": "commonjs"
+  }
 }
