--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Ahmed Eishtawi",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "fluent-ffmpeg": "^2.1.3",
