--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,13 @@ services:
     environment:
       NODE_ENV: production
     command: ["node", "start"]
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx-proxy
+    depends_on:
+      - app
+    ports:
+      - "80:80" # Exposes port 80 to the host
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro # Mounts the Nginx configuration
