--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "3000:3000" # Maps host port 3000 to container port 3000
     environment:
       NODE_ENV: production
-    command: ["node", "start"]
+    command: ["node", "app.js"]
 
   nginx:
     image: nginx:latest
