--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,19 +1,32 @@
-server {
-    listen 80;
+user nginx;
+worker_processes auto;
+pid /var/run/nginx.pid;
 
-    server_name 13.53.100.252;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        proxy_pass http://video-compression-backend:3000; # Route traffic to the app container
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+    server {
+        listen 80;
+
+        server_name 13.53.100.252;
+
+        location / {
+            proxy_pass http://video-compression-backend:3000; # Route traffic to the app container
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
     }
 }
