add ssl certificate

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,10 +10,24 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    # Redirect HTTP to HTTPS
     server {
         listen 80;
+        server_name ahmed-gharghar.tech;
+        return 301 https://$host$request_uri;
+    }
 
-        server_name 13.53.100.252;
+    # HTTPS server
+    server {
+        listen 443 ssl;
+        server_name ahmed-gharghar.tech;
+
+        # SSL certificates
+        ssl_certificate /etc/letsencrypt/live/ahmed-gharghar.tech/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ahmed-gharghar.tech/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
 
         location / {
             proxy_pass http://video-compression-backend:3000; # Route traffic to the app container
