--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,12 @@
-version: '3.8'
-
+version: "3.8"
 services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
-    container_name: video-compression-backend
     ports:
-      - "3000:3000" # Maps host port 3000 to container port 3000
-    environment:
-      NODE_ENV: production
-    command: ["node", "app.js"]
+      - "3000:3000"
+    networks:
+      - app-network
 
   nginx:
     image: nginx:latest
@@ -19,4 +15,12 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro # Share the SSL certs
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    depends_on:
+      - app
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
