--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,29 @@
-version: "3.8"
+version: '3.8'
+
 services:
   app:
     build:
       context: .
+      dockerfile: Dockerfile
+    container_name: video-compression-backend
     ports:
-      - "3000:3000"
-    networks:
-      - app-network
+      - "3000:3000" # Maps host port 3000 to container port 3000
+    environment:
+      NODE_ENV: production
+    command: ["node", "app.js"]
 
   nginx:
     image: nginx:latest
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+    container_name: nginx-proxy
     depends_on:
       - app
-    networks:
-      - app-network
+    ports:
+      - "80:80"  # HTTP port
+      - "443:443" # HTTPS port
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro # Mounts the Nginx configuration
+      - /etc/letsencrypt:/etc/letsencrypt:ro # Mounts Let's Encrypt certificates
 
 networks:
-  app-network:
+  default:
     driver: bridge
