--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,43 @@
-server {
-    listen 443 ssl;
-    server_name ahmed-gharghar.tech;
+user nginx;
+worker_processes auto;
+pid /var/run/nginx.pid;
 
-    ssl_certificate /etc/letsencrypt/live/ahmed-gharghar.tech/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ahmed-gharghar.tech/privkey.pem;
-
-    location / {
-        proxy_pass http://video-compression-backend:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 80;
-    server_name ahmed-gharghar.tech;
-    return 301 https://$host$request_uri;
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    server {
+        listen 80;
+        server_name ahmed-gharghar.tech;
+
+        # Redirect all HTTP requests to HTTPS
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name ahmed-gharghar.tech;
+
+        # SSL certificate and key
+        ssl_certificate /etc/letsencrypt/live/ahmed-gharghar.tech/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/ahmed-gharghar.tech/privkey.pem;
+
+        location / {
+            proxy_pass http://video-compression-backend:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
+    }
 }
