--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,7 @@ events {
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
+    client_max_body_size 100M; # Allow uploads up to 100MB
 
     server {
         listen 80;
