--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,7 +28,7 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/ahmed-gharghar.tech/privkey.pem;
 
         location / {
-            proxy_pass http://video-compression-backend:3000;
+            proxy_pass http://frontend_container:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
